# PacificProduction

./: .gitignore  AppxManifest.xml  README.md  STEP_BY_STEP_GUIDE.md  pacific_app.py  pyproject.toml
.github/workflows/: build-msix.yml  build-windows.yml  release.yml
cli/: AppxManifest.xml  README.md  entry.py  pyproject.toml
cli/pacific_cli/: __init__.py  __main__.py  auth.py  client.py  commands.py  config.py  display.py  export.py  files.py  license.py  market.py
gateway/: .env.example  Dockerfile  auth_manager.py  key_manager.py  requirements.txt  server.py
pacific/: __init__.py  auth.py  chat.py  cli.py  config.py  engine.py  store_license.py
pacific/market/: __init__.py  data.py  ticker.py
pacific/output/: __init__.py  canvas.py  charts.py  excel.py  html_charts.py  json_export.py  math_render.py  pdf.py  terminal.py
pacific/utils/: __init__.py  files.py
